@@ -1015,3 +1015,16 @@ check_zone_lock(dbref player, dbref zone, int noisy)
                     unparse_object(player, zone));
   }
 }
+
+
+void
+purge_locks(void)
+{
+  dbref thing;
+
+  for (thing = 0; thing < db_top; thing++) {
+    lock_list *ll;
+    for (ll = Locks(thing); ll; ll = L_NEXT(ll))
+      L_KEY(ll) = cleanup_boolexp(L_KEY(ll));
+  }
+}
